--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
            <button class="btn active" onclick="filterSelection('all')"> Show all</button>
            <button class="btn" onclick="filterSelection('R')"> R</button>
            <button class="btn" onclick="filterSelection('VBA')"> VBA</button>
-           <button class="btn" onclick="filterSelection('Python')"> Python</button>
+           <button class="btn" onclick="filterSelection('Web')"> Python</button>
           </div>
           <!-- Portfolio Gallery Grid -->
             <div class="row1">
@@ -325,6 +325,13 @@
                  <h4>Debt ledger</h4>
                  <p>It will use the data of transaction record recorded in the invoice listing and cash receive and make a summary for each of the company.</p>
                  <a href="https://github.com/kang20006/debtorledger" target="_blank">Link</a>
+               </div>
+             <div class="column1 Web">
+               <div class="content">
+                 <img src="web1.png" alt="hiaphorironworks web" style="width:100%">
+                 <h4>Hiap Hor Iron Works Website</h4>
+                 <p>Simple website html css javascript</p>
+                 <a href="https://hiaphorironworks.000webhostapp.com/" target="_blank">Link</a>
                </div>
              </div>
             <!-- END GRID -->
