--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
            <button class="btn active" onclick="filterSelection('all')"> Show all</button>
            <button class="btn" onclick="filterSelection('R')"> R</button>
            <button class="btn" onclick="filterSelection('VBA')"> VBA</button>
-           <button class="btn" onclick="filterSelection('Web')"> Python</button>
+           <button class="btn" onclick="filterSelection('Web')"> Web</button>
           </div>
           <!-- Portfolio Gallery Grid -->
             <div class="row1">
@@ -319,6 +319,8 @@
                  <a href="https://github.com/kang20006/Create-Inovice-listing-using-excel-vba" target="_blank">Link</a>
                </div>
              </div>
+          </div>
+          <div class="row1">
              <div class="column1 VBA">
                <div class="content">
                  <img src="vba3.png" alt="debtor ledger" style="width:100%">
